--- a/BootstrapHomework.html
+++ b/BootstrapHomework.html
@@ -35,7 +35,7 @@
                 </button>
                 <button class="fast">快速定制</button>
                 <div class="navbar-brand" href="#">
-                    <img src="img/logo.png" />
+                    <img src="img/logo.png" class="logo" />
                 </div>
 
             </div>
@@ -52,18 +52,18 @@
             </div>
     </nav>
     <!-- banner部分 -->
-    <section id="ban1">
+    <section id="ban">
         <div>
             <div class="container">
-                <div class="row ban11">
+                <div class="row ban1">
                     <div class="col-md-1"></div>
                     <div class="col-md-10">
-                        <h1>悠游古欧洲 遍览德法瑞意</h1>
+                        <h1 class="h1">悠游古欧洲 遍览德法瑞意</h1>
                         <span class="top">巴黎卢浮宫、塞纳河游船、凡尔赛宫</span><br/>
                         <span class="down">少女峰、大运河游船、金色列出、西庸城堡</span></div>
                     <div class="col-md-1"></div>
                 </div>
-                <div class="row ban22">
+                <div class="row ban2">
                     <div class="col-xs-1"></div>
                     <div class="col-xs-8">
                         <h1>悠游古欧洲 遍览德法瑞意</h1>
@@ -90,24 +90,24 @@
         <div class="container img-responsive">
             <div class="row cl0">
                 <div class="media-left">
-                    <img src="img/Sbanner2.jpg " />
+                    <img src="img/Sbanner2.jpg" class="Sbanner2" />
                 </div>
                 <div class="media-body">
-                    <img src="img/car.png " />
+                    <img src="img/car.png " class="car"/>
                     <p>车辆接送</p>
                     <button><a href="">查看详情</a></button>
                 </div>
-                <div class="text-left ">
-                    <h3>机场接送 省钱省心</h3>
-                    <h5>提供上海、苏州、无锡各市<br/>往返机场、码头接送服务，更有包车服务</h5>
+                <div class="text-l ">
+                    <h3 class="air1">机场接送 省钱省心</h3>
+                    <h5 class="air2">提供上海、苏州、无锡各市<br/>往返机场、码头接送服务，更有包车服务</h5>
                 </div>
             </div>
             <div class="row cl1">
                 <div class="media-left">
-                    <img src="img/carH.png" />
+                    <img src="img/carH.png" class="carH"/>
                 </div>
                 <div class="media-body">
-                    <h1>机场接送&nbsp;&nbsp;省心省力</h1>
+                    <h1 class="air">机场接送&nbsp;&nbsp;省心省力</h1>
                     <p>提供上海、苏州、无锡各市<br/>往返机场、码头接送服务，更有包车服务</p>
                 </div>
                 <div>
@@ -122,7 +122,7 @@
         <div class="container">
             <div class="row rm0">
                 <div class="col-md-12 text-center">
-                    <h3>热&nbsp门&nbsp线&nbsp路</h3>
+                    <h3 class="r1">热&nbsp门&nbsp线&nbsp路</h3>
                     <p>Popular tourist routes</p>
                 </div>
             </div>
@@ -159,7 +159,7 @@
             <div class="row rmcard0">
                 <div class="left">
                     <div class="card1">
-                        <a href=" # "><img src="img/hot1.jpg " /></a>
+                        <a href="  "><img src="img/hot1.jpg " /></a>
                         <div class="card-img-overlay">
                             <div class="card-title">
                                 <p>海南三亚5天4晚，纯玩，4晚红树林度假王国
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                     <div class="card2">
-                        <a href=" # "><img src="img/hot2.jpg " /></a>
+                        <a href="  "><img src="img/hot2.jpg " /></a>
                         <div class="card-img-overlay">
                             <div class="card-title">
                                 <p>德法意瑞欧洲4国，ABCD任意路线由您挑选
@@ -179,7 +179,7 @@
                 </div>
                 <div class="right">
                     <div class="card">
-                        <a href=" # "><img src="img/hot3.jpg " /></a>
+                        <a href="  "><img src="img/hot3.jpg " /></a>
                         <div class="card-img-overlay">
                             <div class="card-title">
                                 <p>曼谷+芭提雅 国际五星，赠送2220大礼包，绝无自费
@@ -215,7 +215,7 @@
         <div class="container">
             <div class="mav1">
                 <div class="mav3">
-                    <h3><span>使命与愿景:</span>让旅游回归本质，体验纯粹旅游</h3>
+                    <h3 class="s1"><span>使命与愿景:</span>让旅游回归本质，体验纯粹旅游</h3>
                 </div>
                 <div class="card">
                     <img src="img/mission1.jpg " />
@@ -225,7 +225,7 @@
                 </div>
                 <p class="ln">“英华逸游”通过重新打造旅游全程中的产品线路设计、出行交通方案、陪游向导服务、增值关怀项目等，为客户提供高品质的旅游体验。英华逸游在泰国、欧洲、等多个国家拥有丰富的旅游资源，同时致力于给用户提供性价比高的产品和服务。</p>
                 <div class="row">
-                    <img src="img/mission2.jpg " class=" img-responsive smbn" />
+                    <img src="img/mission2.jpg " class=" img-responsive sm" />
                 </div>
                 <div class="text-center tc2">
                     <p>--服务优势--</p>
@@ -271,7 +271,7 @@
                     <img src="img/mission1.jpg " />
                 </div>
                 <div class="media-body">
-                    <h3>服务理念及优势</h3>
+                    <h3 class="l1">服务理念及优势</h3>
                     <p>“英华逸游”通过重新打造旅游全程中的产品线路设计、出行交通方案、陪游向导服务、增值关怀项目等，为客户提供高品质的旅游体验。英华逸游在泰国、欧洲、等多个国家拥有丰富的旅游资源，同时致力于给用户提供性价比高的产品和服务。</p>
                 </div>
             </div>
@@ -283,7 +283,7 @@
                 <div class="col-md-4">
                     <img class=" text-center " src="img/rorate.png " />
                     <img class="text-center inner " src="img/icon1.png " />
-                    <h3>品质行程</h3>
+                    <h3 class="p1">品质行程</h3>
                     <p class="text-center ">旅游达人精心设计、基于口碑反复打磨，<br/>全网最好，敢跟任何产品比
                     </p>
                 </div>
